# ai-memory

./: AGENTS.md  CHANGELOG.md  Cargo.toml  README.md
crates/ai-memory-cli/: Cargo.toml
crates/ai-memory-cli/src/: cli.rs  config.rs  http_client.rs  main.rs
crates/ai-memory-consolidate/: Cargo.toml
crates/ai-memory-consolidate/src/: auto_improve.rs  bootstrap.rs  lib.rs
crates/ai-memory-core/src/: routing_snippet.rs
crates/ai-memory-hooks/src/: router.rs  synth.rs
crates/ai-memory-web/: Cargo.toml
crates/ai-memory-web/src/: lib.rs  state.rs  templates.rs
crates/ai-memory-web/src/routes/: chat.rs  index.rs  mod.rs  page.rs  project.rs  statics.rs
crates/ai-memory-web/static/: chat.js
crates/ai-memory-web/templates/: page.html  project.html  projects.html
crates/ai-memory-web/tests/: routes.rs
crates/ai-memory-wiki/: Cargo.toml
docs/: ARCHITECTURE.md  auto-improvement-loop.md  auto-scope.md  design-decisions.md  install.md  llm-provider-comparison.md  marker-file.md  mcp-install.md  usage.md
hooks/: _lib.sh
hooks/antigravity-cli/: session-start.sh
hooks/claude-code/: session-start.sh  user-prompt-submit.ps1  user-prompt-submit.sh
hooks/codex/: session-start.sh  user-prompt-submit.ps1  user-prompt-submit.sh
hooks/cursor/: session-start.sh  user-prompt-submit.ps1  user-prompt-submit.sh
hooks/gemini-cli/: session-start.sh  user-prompt-submit.ps1  user-prompt-submit.sh
hooks/lib/: ai-memory-hook.ps1
hooks/opencode/: session-start.sh  user-prompt-submit.ps1  user-prompt-submit.sh
tests/hooks/: test_lib.sh
(+30 files in other folders)
